--- a/sales.html
+++ b/sales.html
@@ -7,7 +7,14 @@
   <title>Sales</title>
 </head>
 <body>
+  <h1> Cookies Sales</h1>
+  <section id="seattleSales">
+    <h2> Seattle</h2>
+  </section> 
+  <section>
+    
+  </section>
   
-  <script> src="js/app.js"</script>
+  <script src="js/app.js"> </script>
 </body>
 </html>
