--- a/sales.html
+++ b/sales.html
@@ -11,8 +11,21 @@
   <section id="seattleSales">
     <h2> Seattle</h2>
   </section> 
-  <section>
-    
+
+  <section id="tokyoSales"> 
+    <h2> Tokyo</h2>
+  </section>
+  
+  <section id="dubaiSales">
+    <h2> Dubai</h2>
+  </section>
+
+  <section id="parisSales">
+    <h2> Paris</h2>
+  </section>
+
+  <section id="limaSales">
+    <h2> Lima</h2>
   </section>
   
   <script src="js/app.js"> </script>
