--- a/sales.html
+++ b/sales.html
@@ -27,6 +27,14 @@
   <section id="limaSales">
     <h2> Lima</h2>
   </section>
+
+  <table id="table"> 
+    <thead> 
+    </thead>
+    <tbody></tbody>
+    <tfoot></tfoot>
+
+  </table>
   
   <script src="js/app.js"> </script>
 </body>
