--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/style.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Cookie Stand</title>
   
 </head>
+<nav> <a href="sales.html">Sales</a> </nav>
+
 <body>
-  <a href="sales.html">Sales</a>
+  <h1> Welcome To Our Cookie Stand Site!</h1>
+  <h4> Our Locations Include
+    <p> All store locations are open from 6am-8pm</p>
+    <ul>
+      <li>Seattle</li>
+      <li> Tokyo</li>
+      <li>Dubai</li>
+      <li>Paris</li>
+      <li>Lima</li>
+    </ul>
+    <p> Please contact us at 206-981-6520 for any questions or concerns</p>
+  </h4>
+  
+
+  <img src="img/assets/cutter.jpeg" alt="cutter">
+  <img src="img/assets/family.jpg" alt="family">
+  <img src="img/assets/fish.jpg" alt="fishy">
+  <img src="img/assets/frosted-cookie.jpg" alt="frosted-cookie">
+  <img src="img/assets/salmon.png" alt="salmon">
+  <img src="img/assets/shirt.jpg" alt="shirt">
+
+  <div> 
+    <img src="img/assets/chinook.jpg" alt="Chinook">
+
+  </div>
+
+  <div> <img src="img/assets/cutter.jpeg" alt="cutter"></div>
+  
 </body>
 </html>
