--- a/sales.html
+++ b/sales.html
@@ -5,7 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sales</title>
+  <a href="index.html">Main Page</a>
 </head>
+
 <body>
   <h1> Cookies Sales</h1>
   <section id="seattleSales">
